--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,25 +1,34 @@
-
+<div class='hero-head'>
   <div class='container'>
     <div class='title'>
-      <h1>Tresspass</h1>
+      <h1>Trespass</h1>
     </div>
     <div class='sub-title is-bold'>
       <h1><strong>Comment Page</strong></h1>
     </div>
   </div>
+</div>
+<div class='hero-body'>
   <div class='container'>
     <div><strong>Comment: </strong></div>
     <div><%= @comment.description %></div>
-    <span class="level-item" aria-label="nav buttons">
-      <%= link_to  '<i class="fas fa-edit" aria-hidden="true"></i>'.html_safe, edit_comment_path(@comment.id) %>
-      <%= link_to  '<i class="fas fa-trash-alt" aria-hidden="true"></i>'.html_safe, comment_path(@comment.id), method: :delete %>  
-    </span>
+      <nav class='tabs'>
+        <span class="level-item" aria-label="nav buttons">
+          <%= link_to  '<i class="fas fa-edit" aria-hidden="true"></i>'.html_safe, edit_comment_path(@comment.id) %>
+          <%= link_to  '<i class="fas fa-trash-alt" aria-hidden="true"></i>'.html_safe, comment_path(@comment.id), method: :delete %>  
+        </span>
+      </nav>
   </div>
-  <div class='container'>
-    <span class="level-item" aria-label="nav buttons">
-      <%= link_to  '<i class="fas fa-home" aria-hidden="true"></i>'.html_safe, current_user unless current_user.nil? %>
-      <%= link_to  '<i class="fas fa-sign-out-alt" aria-hidden="true"></i>'.html_safe, logout_path %>
-      <%= link_to  '<i class="fas fa-search" aria-hidden="true"></i>'.html_safe, listings_path %>    
-    </span>
-  </div>
+</div>
+<div class='hero-foot'>
+  <nav class='tabs'>
+    <div class='container'>
+      <span class="level-item" aria-label="nav buttons">
+        <%= link_to  '<i class="fas fa-home" aria-hidden="true"></i>'.html_safe, current_user unless current_user.nil? %>
+        <%= link_to  '<i class="fas fa-sign-out-alt" aria-hidden="true"></i>'.html_safe, logout_path %>
+        <%= link_to  '<i class="fas fa-search" aria-hidden="true"></i>'.html_safe, listings_path %>    
+      </span>
+    </div>
+  </nav>
+</div>
 
