--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <section class='hero'>
+    <section class='hero is-primary is-fullheight header-image'>
       <%= yield %>
     </section>
   </body>
