--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,4 +13,18 @@
  *= require_tree .
  *= require_self
  */
- @import 'bulma'
+
+@import 'bulma';
+.header-image {
+    background-image: url("http://orig14.deviantart.net/7584/f/2015/181/2/7/flat_mountains_landscape_by_ggiuliafilippini-d8zdbco.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #999;
+}
+
+;
+.listing-element {
+    background-color: burlywood;
+}
